<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finderFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_darkest"
    tools:context=".view.finder.FinderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_profile_id"
                android:layout_width="413dp"
                android:layout_height="600dp"
                android:layout_marginBottom="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/place_holder_profile"
                android:foreground="@drawable/gradient_bg"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toTopOf="@+id/rejectBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/rejectBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="right|center_horizontal"

                android:background="@drawable/close_background_round"
                android:src="@drawable/ic_close"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/chat_btn_id"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/acceptBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:background="@drawable/check_background_round"
                android:src="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chat_btn_id" />

            <ImageButton
                android:id="@+id/chat_btn_id"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/chat_background_round"
                android:src="@drawable/ic_chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/acceptBtn"
                app:layout_constraintStart_toEndOf="@id/rejectBtn" />

            .

            <ImageButton
                android:id="@+id/more"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_more_horizontal"
                app:layout_constraintBottom_toTopOf="@+id/tv_user_name_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_personality_type_id"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/iv_location_icon_id"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"

                android:background="@android:color/transparent"
                android:src="@drawable/ic_location"

                app:layout_constraintBottom_toBottomOf="@id/iv_profile_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_personality_type_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:shadowColor="#000000"
                android:textSize="24sp"

                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Personality" />

            <TextView
                android:id="@+id/tv_user_location_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/iv_location_icon_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="location" />

            <TextView
                android:id="@+id/distanceView"
                android:layout_width="118dp"
                android:layout_height="30dp"

                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:textColor="@color/quantum_yellow"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.021"
                app:layout_constraintStart_toEndOf="@id/iv_location_icon_id"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.977"
                tools:text="_ km" />

            <TextView
                android:id="@+id/compatiblity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:text="0% Match"
                android:textColor="@color/Lime"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_user_location_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.042"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_personality_type_id"
                app:layout_constraintVertical_bias="0.037" />

            <TextView
                android:id="@+id/tv_user_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:text="name"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.763"
                app:layout_constraintStart_toEndOf="@+id/distanceView"
                app:layout_constraintTop_toTopOf="@+id/iv_profile_id"
                app:layout_constraintVertical_bias="0.978" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


<!--
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finderFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_darkest"
    tools:context=".view.finder.FinderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
-->